[package]
name = "photoman-core"
version = "0.1.0"
authors = ["Matthew Shang <mshang47@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "photoman_core"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
yup-oauth2 = "^1.0"
google-drive3 = "^1.0"
hyper = "^0.10"
hyper-native-tls = "0.3"
